# Lab_1_LinAl

./: .gitignore  CMakeLists.txt  README.md
include/: gauss_solver.h  lu_solver.h  matrix_utils.h  timer.h
src/: gauss_solver.cpp  lu_solver.cpp  main.cpp  matrix_utils.cpp  timer.cpp
